--- a/photo.html
+++ b/photo.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Multiple pages</title>
+    <title>Croissant picture</title>
   </head>
   <body>
-    <h1>Croissant</h1>
-    <p>
-      A croissant is a French pastry made from puff pastry in a crescent shape.
-      Croissant. Type, Viennoiserie. Course, Breakfast. Place of origin, France.
-    </p>
+    <h1>CROISSANT PICTURE</h1>
+    <img src="/images/croissant.jpeg" alt="" class="croissant-photo" />
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
