Added contact info

--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>CROISSANT PICTURE</h1>
-    <img src="/images/croissant.jpeg" alt="" class="croissant-photo" />
+    <img src="src/images/croissant.jpeg" alt="" class="croissant-photo" />
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
