--- a/contact.html
+++ b/contact.html
@@ -9,5 +9,10 @@
   <body>
     <h1>Contact us</h1>
     <p>Email us at hello@croissant.com for more information</p>
+    <footer>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo.html" title="Croissant photo"> Photo</a>
+      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+    </footer>
   </body>
 </html>
