Made website SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact us-croissant.com</title>
+    <meta
+      name="description"
+      content="Contact croissant.com to get more information about our croissants"
+    />
   </head>
   <body>
     <h1>Contact us</h1>
-    <p>Email us at hello@croissant.com for more information</p>
+    Email us at
+    <a href="mailto:hello@croissant.com" title="contact us by email"
+      >hello@croissant.com</a
+    >
+    for more information
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
