--- a/photo.html
+++ b/photo.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Croissant picture</title>
+    <title>A picture of a beautiful croissant></title>
+    <meta
+      name="description"
+      content="enjoy a picture of a beautiful croissant"
+    />
   </head>
   <body>
     <h1>CROISSANT PICTURE</h1>
-    <img src="src/images/croissant.jpeg" alt="" class="croissant-photo" />
+    <img
+      src="src/images/croissant.jpeg"
+      alt="Homemade croissant"
+      class="croissant-photo"
+    />
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
